# lab5

./: README.md  lab5.cabal  stack.yaml
bench/: Main.hs
src/: Lab5.hs
test/: Spec.hs
