name:                lab5
version:             1.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/lab5#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2018 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lab5
  build-depends:
    base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options: -O0

test-suite lab5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base,
    hspec,
    QuickCheck,
    lab5
  ghc-options: -O0
  default-language:    Haskell2010

benchmark cswk1-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
    base, lab5, criterion
  default-language: Haskell2010
  ghc-options: -O0

source-repository head
  type:     git
  location: https://github.com/fpclass/lab5
